syntax = "proto3";

import "ffi_event_type.proto";

message HkFFIRequest {
    HkFFIEventType event = 1;
    bytes payload = 2;
}
